--- a/Contacto.html
+++ b/Contacto.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-    <link rel="icon" href="images/favicon.png"/>
-	<title>ZUCASA - Gestión Inmobiliaria</title>
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial_scale=1.0, minimun-scale=1.0">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/estilos.css">
+		<meta charset="UTF-8">
+	    <link rel="icon" href="images/favicon.png"/>
+		<title>ZUCASA - Gestión Inmobiliaria</title>
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial_scale=1.0, minimun-scale=1.0">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 	<div class="container-fliud">
@@ -24,14 +24,6 @@
 				</div>
 			</header>
 		</div>
-				<!-- <nav>
-					<ul id="menu">
-						<li id="menu_active"><a  href="index.html">Inicio</a></li>
-						<li><a href="Ventas.html">Ventas</a></li>
-						<li><a href="Arriendos.html">Arriendos</a></li>
-						<li class="end"><a href="Contacto.html">Contactenos</a></li>
-					</ul>
-				</nav> -->
 	    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
 	        	<a class="navbar-brand" href="index.html"></a>
 	        	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,101 +38,117 @@
 		              		<a class="nav-link" href="#">Arriendos</a>
 		            	</li>
 		            	<li class="menu_active">
-		              		<a class="nav-link" href="Contacto.html">Contáctenos</a>
+		              		<a class="nav-link" href="contacto.html">Contáctenos</a>
 		            	</li>
 	          		</ul>
 	        	</div>
 	    </nav>		
-	<!-- </div> -->
 
-	<div class="body2">
-		<section class="main row" >
-			<article class="col-xs-12 col-sm-8 col-md-7 col-lg-8">
-				<form id="ContactForm" method="post">
-					<div class="pad1">
-                            <h3 class="maintitle"><span><i class="fa fa-envelope"></i> Envíanos un mensaje</span></h3>
-<!-- 						<h3>Contáctenos</h3> -->
-						<div  class="wrapper">
-							<span>Nombre:</span>
-							<input type="text" class="form-control" >
-						</div>
-						<div  class="wrapper">
-							<span>E-mail:</span>
-							<input type="text" class="form-control" >
-						</div>
-						<div  class="textarea_box">
-							<label for="mensaje">Mensaje:</label>
-							<textarea class="form-control" id="mensaje" placeholder="Escribe tu mensaje"></textarea>
-						</div>
-						<span>&nbsp;</span>
-						<a href="#" class="button" onClick="document.getElementById('ContactForm').reset()">Limpiar</a>
-						<a href="#" class="button" onClick="document.getElementById('ContactForm').submit()">Enviar</a>
-					</div>				
-				</form>
-			</article>
-			<aside class="col-xs-12 col-sm-4 col-md-5 col-lg-4">
-				<form id="form_1" method="post">
-					<div class="pad1">
-						<h3>Buscar Propiedades</h3>
-							<label for="comuna">Ciudad o Comuna::</label>
-							<select class="form-control" name="" id="comuna">
-								<option value="">&nbsp;</option>
-								<option value="">Opcion #1</option>
-								<option value="">Opcion #2</option>
-								<option value="">Opcion #3</option>
-								<option value="">Opcion #4</option>
-								<option value="">Opcion #5</option>
-							</select>
-							<label for="sector">Sector:</label>
-							<input class="form-control" type="text" id="sector">
-							<div class="input-group">
-								<div class="cols">
-									<label for="precio_desde">Rango Precios::</label>
-									<input class="form-control" type="text" id="precio_desde">
-								</div>
-								<div class="cols pad_left1">
-									<label for="precio_hasta">Hasta:</label>
-									<input class="form-control" type="text" id="precio_hasta">
-								</div>
+		<div class="body2">
+			<section class="main row" >
+				<article class="col-xs-12 col-sm-8 col-md-7 col-lg-8">
+					<form id="ContactForm" method="post">
+						<div class="pad1">
+	                            <h3 class="maintitle"><span><i class="fa fa-envelope"></i> Envíanos un mensaje</span></h3>
+							<div  class="wrapper">
+								<label for="nombre_completo">Nombre:</label>
+								<input type="text" class="form-control" placeholder="Nombre y Apellidos" id="nombre_completo">
 							</div>
-							<div class="input-group">
-								<div class="cols">
-									<label for="dormitorio">Dormitorio(s):</label>
-									<select class="form-control" name="" id="dormitorio">
-										<option value="">&nbsp;</option>
-										<option value="">1</option>
-										<option value="">2</option>
-										<option value="">3</option>
-										<option value="">4</option>
-										<option value="">5</option>
-										<option value="">Más de 5</option>
-									</select>
-								</div>
-								<div class="cols pad_left1">
-									<label for="banio">Baño(s):</label>
-									<select class="form-control" name="" id="banio">
-										<option value="">&nbsp;</option>
-										<option value="">1</option>
-										<option value="">2</option>
-										<option value="">3</option>
-										<option value="">Más de 3</option>
-									</select>
-								</div>
+							<div  class="wrapper">
+								<label for="correo_electronico">E-mail:</label>
+								<input type="text" class="form-control" id="correo_electronico">
 							</div>
-								<a href="#" class="button" onClick="document.getElementById('form_1').submit()">Buscar</a> 
-					</div>
-				</form>
-			</aside>
-		</section>
-	</div>
-	<div >
-	<!-- 	<div class="main body4">
- -->
-			<footer">
-                    <div class="col-xs-12 col-sm-4 col-md-5 col-lg-4">
-						<span class="call">Call Center: <span>800-900-1000</span></span>
-					</div>
-                    <div class="col-xs-12 col-sm-8 col-md-7 col-lg-8">
+							<div  class=" wrapper textarea_box">
+								<label for="mensaje">Mensaje:</label>
+								<textarea class="form-control" id="mensaje" placeholder="Escribe tu mensaje"></textarea>
+							</div>
+							<div  class="wrapper">
+								<div class="alert alert-danger hidden">
+					                <strong id="alerta"></strong>
+					            </div>
+				        	</div>
+							<div  class="wrapper">
+								<a href="#" class="button" id="btn_enviar" >Enviar</a>
+								<a href="#" class="button" id="btn_limpiar" onClick="document.getElementById('ContactForm').reset()">Limpiar</a>
+							</div>
+						</div>				
+					</form>
+				</article>
+				<aside class="col-xs-12 col-sm-4 col-md-5 col-lg-4">
+					<form id="form_1" method="post">
+						<div class="pad1">
+							<h3>Buscar Propiedades</h3>
+								<label class="wrapper" for="region">Región:</label>
+								<select class="form-control" name="" id="region">
+									<option value="">&nbsp;</option>
+									<option value="09">La Araucanía</option>
+									<option value="14">Los Ríos</option>
+									<option value="10">Los Lagos</option>
+									<option value="11">Aysén del General Carlos Ibáñez del Campo</option>
+								</select>
+								<label for="comuna">Ciudad o Comuna::</label>
+								<select class="form-control" name="" id="comuna">
+									<option value="">&nbsp;</option>
+									<option value="">Opcion #1</option>
+									<option value="">Opcion #2</option>
+									<option value="">Opcion #3</option>
+									<option value="">Opcion #4</option>
+									<option value="">Opcion #5</option>
+								</select>
+								<label for="sector">Sector:</label>
+								<input class="form-control" type="text" id="sector">
+								<div class="input-group">
+									<div class="cols">
+										<label for="precio_desde">Rango Precios::</label>
+										<input class="form-control" type="text" id="precio_desde">
+									</div>
+									<div class="cols pad_left1">
+										<label for="precio_hasta">Hasta:</label>
+										<input class="form-control" type="text" id="precio_hasta">
+									</div>
+								</div>
+								<div class="input-group">
+									<div class="cols">
+										<label for="dormitorio">Dormitorio(s):</label>
+										<select class="form-control" name="" id="dormitorio">
+											<option value="">&nbsp;</option>
+											<option value="">1</option>
+											<option value="">2</option>
+											<option value="">3</option>
+											<option value="">4</option>
+											<option value="">5</option>
+											<option value="">Más de 5</option>
+										</select>
+									</div>
+									<div class="cols pad_left1">
+										<label for="banio">Baño(s):</label>
+										<select class="form-control" name="" id="banio">
+											<option value="">&nbsp;</option>
+											<option value="">1</option>
+											<option value="">2</option>
+											<option value="">3</option>
+											<option value="">Más de 3</option>
+										</select>
+									</div>
+								</div>
+									<a href="#" class="button" onClick="document.getElementById('form_1').submit()">Buscar</a> 
+						</div>
+					</form>
+				</aside>
+			</section>
+		</div>
+		<div class="body4">
+			<footer>
+					<span class="call">Call Center: <span id="a_call_center"></span></span>
+                        <!-- <h3 class="maintitle"><span><i class="fa fa-map-marker"></i> Ubicación</span></h3> -->
+                        <span class="maintitle"><i class="fa fa-map-marker"></i> Ubicación</span>
+                        <dl>
+                            <dt><span id="a_direccion"></span></dt>
+                            <dd><span>Celular:</span><a id="a_celular"></a> Telefono:</span><a id="a_telefono"></a></dd>
+                            <dd><span>Correo electrónico:</span><a id="a_correo"></a></dd>
+                        </dl>
+
+<!--                     <div class="col-xs-12 col-sm-8 col-md-7 col-lg-8">
                         <h3 class="maintitle"><span><i class="fa fa-map-marker"></i> Ubicación</span></h3>
                         <dl>
                             <dt>Ailyn 340, Puerto Montt</dt>
@@ -148,13 +156,15 @@
                             <dd><span>Correo electrónico:</span><a id="a_correo">contacto@zucasa.cl</a></dd>
                         </dl>
 					</div>
+                    <div class="col-xs-12 col-sm-4 col-md-5 col-lg-4">
+						<span class="call">Call Center: <span>800-900-1000</span></span>
+					</div> -->
 			</footer>
 		</div>
-	<!-- </div> -->
-
-
-	<script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script> 
-</div>
+ <!--        <script type="text/javascript" src="js/contacto.js"></script> -->
+        <script src="js/jquery.min.js" type="text/javascript"></script>
+        <script src="js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="js/contacto.js" type="text/javascript"></script>
+	</div>
 </body>
 </html>	
