--- a/index.html
+++ b/index.html
@@ -24,14 +24,7 @@
 				</div>
 			</header>
 		</div>
-				<!-- <nav>
-					<ul id="menu">
-						<li id="menu_active"><a  href="index.html">Inicio</a></li>
-						<li><a href="Ventas.html">Ventas</a></li>
-						<li><a href="Arriendos.html">Arriendos</a></li>
-						<li class="end"><a href="Contacto.html">Contactenos</a></li>
-					</ul>
-				</nav> -->
+
 	    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
 	        	<a class="navbar-brand" href="#"></a>
 	        	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,149 +39,138 @@
 		              		<a class="nav-link" href="#">Arriendos</a>
 		            	</li>
 		            	<li>
-		              		<a class="nav-link" href="Contacto.html">Contáctenos</a>
+		              		<a class="nav-link" href="contacto.html">Contáctenos</a>
 		            	</li>
 	          		</ul>
 	        	</div>
 	    </nav>		
-	<!-- </div> -->
-
-	<div class="body2">
-		<section class="main row" >
-			<article class="col-xs-12 col-sm-8 col-md-7 col-lg-8">
-    	  		 	<div id="carouselPropiedades" class="carousel slide" data-ride="carousel">
-    	  		 			<ol class="carousel-indicators">
-    	  		 					<li data-target="#carouselPropiedades" data-slide-to="0" class="active"></li>
-    	  		 		    		<li data-target="#carouselPropiedades" data-slide-to="1"></li>
-    	  		 		    		<li data-target="#carouselPropiedades" data-slide-to="2"></li>
-    	  		 		  	</ol>
-    	  		 		  	<div class="carousel-inner">
-    	  		 		    		<div class="carousel-item active">
-    	  		 		      				<img class="d-block w-100" src="images/casas/img6a.jpg" alt="First slide">
-    	  		 			  				<div class="carousel-caption d-none d-md-block">
-    	  		 			    					<h3>Villa Puerta del Sol</h3>
-    	  		 			    					<span>4 Dormitorios, 2 baños, 180 mts2&nbsp; &nbsp; &nbsp;Precio: $65.000.000</span>
-    	  		 			  				</div>
-    	  		 		    		</div>
-		    	  		 		    <div class="carousel-item">
-		    	  		 		      		<img class="d-block w-100" src="images/casas/img1.jpg" alt="Second slide">
-		    	  		 			  		<div class="carousel-caption d-none d-md-block">
-		    	  		 			    			<h3>Villa Lipsum, 2008</h3>
-		    	  		 			    			<span>4 Dormitorios, 4 baños, 450 mts2&nbsp; &nbsp; &nbsp;$Precio: 105.000.000</span>
-		    	  		 			  		</div>
-		    	  		 		    </div>
-		    	  		 		    <div class="carousel-item">
-		    	  		 		      		<img class="d-block w-100" src="images/casas/img2.jpg" alt="Third slide">
-		    	  		 			  		<div class="carousel-caption d-none d-md-block">
-		    	  		 			    			<h3>Villa Dolor Sid, 2007</h3>
-		    	  		 			    			<span>5 Dormitorios, 3 baños, 600 mts2&nbsp; &nbsp; &nbsp;$Precio: 120.000.000</span>
-		    	  		 			  		</div>
-		    	  		 		    </div>
-    	  		 		  </div>
-    	  		 		  <a class="carousel-control-prev" href="#carouselPropiedades" role="button" data-slide="prev">
-    	  		 		    	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    	  		 		    	<span class="sr-only">Previous</span>
-    	  		 		  </a>
-    	  		 		  <a class="carousel-control-next" href="#carouselPropiedades" role="button" data-slide="next">
-    	  		 		    	<span class="carousel-control-next-icon" aria-hidden="true"></span>
-    	  		 		    	<span class="sr-only">Next</span>
-    	  		 		  </a>
-					</div>
-			</article>
-			<aside class="col-xs-12 col-sm-4 col-md-5 col-lg-4">
-				<form id="form_1" method="post">
-					<div class="pad1">
-						<h3>Buscar Propiedades</h3>
-							<label for="comuna">Ciudad o Comuna::</label>
-							<select class="form-control" name="" id="comuna">
-								<option value="">&nbsp;</option>
-								<option value="">Opcion #1</option>
-								<option value="">Opcion #2</option>
-								<option value="">Opcion #3</option>
-								<option value="">Opcion #4</option>
-								<option value="">Opcion #5</option>
-							</select>
-							<label for="sector">Sector:</label>
-							<input class="form-control" type="text" id="sector">
-							<div class="input-group">
-								<div class="cols">
-									<label for="precio_desde">Rango Precios::</label>
-									<input class="form-control" type="text" id="precio_desde">
-<!-- 									<label for="precio_desde">Rango Precios:</label>
-									<select class="form-control" name="" id="precio_desde">
-										<option value="">&nbsp;</option>
-										<option value="">Opcion #1</option>
-										<option value="">Opcion #2</option>
-										<option value="">Opcion #3</option>
-										<option value="">Opcion #4</option>
-										<option value="">Opcion #5</option>
-									</select> -->
+		<div class="body2">
+			<section class="main row" >
+				<article class="col-xs-12 col-sm-8 col-md-7 col-lg-8">
+	    	  		 	<div id="carouselPropiedades" class="carousel slide" data-ride="carousel">
+	    	  		 			<ol class="carousel-indicators">
+	    	  		 					<li data-target="#carouselPropiedades" data-slide-to="0" class="active"></li>
+	    	  		 		    		<li data-target="#carouselPropiedades" data-slide-to="1"></li>
+	    	  		 		    		<li data-target="#carouselPropiedades" data-slide-to="2"></li>
+	    	  		 		  	</ol>
+	    	  		 		  	<div class="carousel-inner">
+	    	  		 		    		<div class="carousel-item active">
+	    	  		 		      				<img class="carousel-img" src="images/casas/img6a.jpg" alt="First slide">
+	    	  		 			  				<div class="carousel-caption d-none d-md-block">
+	    	  		 			    					<h3>Villa Puerta del Sol</h3>
+	    	  		 			    					<span>4 Dormitorios, 2 baños, 180 mts2&nbsp; &nbsp; &nbsp;Precio: $65.000.000</span>
+	    	  		 			  				</div>
+	    	  		 		    		</div>
+			    	  		 		    <div class="carousel-item">
+			    	  		 		      		<img class="carousel-img" src="images/casas/img1.jpg" alt="Second slide">
+			    	  		 			  		<div class="carousel-caption d-none d-md-block">
+			    	  		 			    			<h3>Villa Lipsum, 2008</h3>
+			    	  		 			    			<span>4 Dormitorios, 4 baños, 450 mts2&nbsp; &nbsp; &nbsp;$Precio: 105.000.000</span>
+			    	  		 			  		</div>
+			    	  		 		    </div>
+			    	  		 		    <div class="carousel-item">
+			    	  		 		      		<img class="carousel-img" src="images/casas/img2.jpg" alt="Third slide">
+			    	  		 			  		<div class="carousel-caption d-none d-md-block">
+			    	  		 			    			<h3>Villa Dolor Sid, 2007</h3>
+			    	  		 			    			<span>5 Dormitorios, 3 baños, 600 mts2&nbsp; &nbsp; &nbsp;$Precio: 120.000.000</span>
+			    	  		 			  		</div>
+			    	  		 		    </div>
+	    	  		 		  </div>
+	    	  		 		  <a class="carousel-control-prev" href="#carouselPropiedades" role="button" data-slide="prev">
+	    	  		 		    	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	    	  		 		    	<span class="sr-only">Previous</span>
+	    	  		 		  </a>
+	    	  		 		  <a class="carousel-control-next" href="#carouselPropiedades" role="button" data-slide="next">
+	    	  		 		    	<span class="carousel-control-next-icon" aria-hidden="true"></span>
+	    	  		 		    	<span class="sr-only">Next</span>
+	    	  		 		  </a>
+						</div>
+				</article>
+				<aside class="col-xs-12 col-sm-4 col-md-5 col-lg-4">
+					<form id="form_1" method="post">
+						<div class="pad1">
+							<h3>Buscar Propiedades</h3>
+								<label class="wrapper" for="region">Región:</label>
+								<select class="form-control" name="" id="region">
+									<option value="">&nbsp;</option>
+									<option value="09">La Araucanía</option>
+									<option value="14">Los Ríos</option>
+									<option value="10">Los Lagos</option>
+									<option value="11">Aysén del General Carlos Ibáñez del Campo</option>
+								</select>
+								<label class="wrapper" for="comuna">Ciudad o Comuna:</label>
+								<select class="form-control" name="" id="comuna">
+									<option value="">&nbsp;</option>
+									<option value="">Opcion #1</option>
+									<option value="">Opcion #2</option>
+									<option value="">Opcion #3</option>
+									<option value="">Opcion #4</option>
+									<option value="">Opcion #5</option>
+								</select>
+								<label for="sector">Sector:</label>
+								<input class="form-control" type="text" id="sector">
+								<div class="input-group">
+									<div class="cols">
+										<label for="precio_desde">Rango Precios:</label>
+										<input class="form-control" type="text" id="precio_desde">
+									</div>
+									<div class="cols pad_left1">
+										<label for="precio_hasta">Hasta:</label>
+										<input class="form-control" type="text" id="precio_hasta">
+									</div>
 								</div>
-								<div class="cols pad_left1">
-									<label for="precio_hasta">Hasta:</label>
-									<input class="form-control" type="text" id="precio_hasta">
-<!-- 									<label for="precio_hasta">Hasta:</label>
-									<select class="form-control" name="" id="precio_hasta">
-										<option value="">&nbsp;</option>
-										<option value="">Opcion #1</option>
-										<option value="">Opcion #2</option>
-										<option value="">Opcion #3</option>
-										<option value="">Opcion #4</option>
-										<option value="">Opcion #5</option>
-									</select> -->
+								<div class="input-group">
+									<div class="cols">
+										<label for="dormitorio">Dormitorio(s):</label>
+										<select class="form-control" name="" id="dormitorio">
+											<option value="">&nbsp;</option>
+											<option value="">1</option>
+											<option value="">2</option>
+											<option value="">3</option>
+											<option value="">4</option>
+											<option value="">5</option>
+											<option value="">Más de 5</option>
+										</select>
+									</div>
+									<div class="cols pad_left1">
+										<label for="banio">Baño(s):</label>
+										<select class="form-control" name="" id="banio">
+											<option value="">&nbsp;</option>
+											<option value="">1</option>
+											<option value="">2</option>
+											<option value="">3</option>
+											<option value="">Más de 3</option>
+										</select>
+									</div>
 								</div>
-							</div>
-							<div class="input-group">
-								<div class="cols">
-									<label for="dormitorio">Dormitorio(s):</label>
-									<select class="form-control" name="" id="dormitorio">
-										<option value="">&nbsp;</option>
-										<option value="">1</option>
-										<option value="">2</option>
-										<option value="">3</option>
-										<option value="">4</option>
-										<option value="">5</option>
-										<option value="">Más de 5</option>
-									</select>
-								</div>
-								<div class="cols pad_left1">
-									<label for="banio">Baño(s):</label>
-									<select class="form-control" name="" id="banio">
-										<option value="">&nbsp;</option>
-										<option value="">1</option>
-										<option value="">2</option>
-										<option value="">3</option>
-										<option value="">Más de 3</option>
-									</select>
-								</div>
-							</div>
 								<a href="#" class="button" onClick="document.getElementById('form_1').submit()">Buscar</a> 
-					</div>
-				</form>
-			</aside>
-		</section>
-	</div>
-	<div >
-	<!-- 	<div class="main body4">
- -->
-			<footer>
-					<span class="call">Call Center: <span>800-900-1000</span></span>
-                        <h3 class="maintitle"><span><i class="fa fa-map-marker"></i> Ubicación</span></h3>
+						</div>
+					</form>
+				</aside>
+			</section>
+		</div>
+		<div>
+			<footer class="body4">
+					<span class="call">Call Center: <span id="a_call_center"></span></span>
+                        <!-- <h3 class="maintitle"><span><i class="fa fa-map-marker"></i> Ubicación</span></h3> -->
+                        <span class="maintitle"><i class="fa fa-map-marker"></i> Ubicación</span>
+                        <dl>
+                            <dt><span id="a_direccion"></span></dt>
+                            <dd><span>Celular:</span><a id="a_celular"></a> Telefono:</span><a id="a_telefono"></a></dd>
+                            <dd><span>Correo electrónico:</span><a id="a_correo"></a></dd>
+                        </dl>
+<!-- 					<span class="call">Call Center: <span>800-900-1000</span></span>
+                        <span class="maintitle"><i class="fa fa-map-marker"></i> Ubicación</span>
                         <dl>
                             <dt>Ailyn 340, Puerto Montt</dt>
                             <dd><span>Celular:</span><a id="a_celular">+56 9 99999999</a></dd>
                             <dd><span>Correo electrónico:</span><a id="a_correo">contacto@zucasa.cl</a></dd>
-                        </dl>
-
-<!-- 					Ailyn 340, Puerto Montt<br>
-					Cel +56 9 99999999
- -->			</footer>
+                        </dl> -->
+			</footer>
 		</div>
-	<!-- </div> -->
-
-
-	<script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script> 
-</div>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/bootstrap.min.js"></script> 
+        <script type="text/javascript" src="js/index.js"></script>
+	</div>
 </body>
 </html>	
