--- a/Contacto.html
+++ b/Contacto.html
@@ -47,6 +47,7 @@
 		<div class="body2">
 			<section class="main row" >
 				<article class="col-xs-12 col-sm-8 col-md-7 col-lg-8">
+					<div id="propiedades">
 					<form id="ContactForm" method="post">
 						<div class="pad1">
 	                            <h3 class="maintitle"><span><i class="fa fa-envelope"></i> Envíanos un mensaje</span></h3>
@@ -73,77 +74,16 @@
 							</div>
 						</div>				
 					</form>
+					</div>
 				</article>
 				<aside class="col-xs-12 col-sm-4 col-md-5 col-lg-4">
 					<form id="form_busqueda" method="post">
-						<div class="pad1">
-							<h3>Buscar Propiedades</h3>
-								<label class="wrapper" for="region">Región:</label>
-								<select class="form-control" name="" id="region">
-								</select>
-								<div class="input-group">
-									<div class="cols">
-										<label class="wrapper" for="comuna">Provincia:</label>
-										<select class="form-control" name="" id="provincia">
-										</select>
-									</div>
-									<div class="cols pad_left1">
-										<label class="wrapper" for="comuna">Comuna:</label>
-										<select class="form-control" name="" id="comuna">
-										</select>
-									</div>
-								</div>
-								<label for="sector">Sector:</label>
-								<input class="form-control" type="text" id="sector">
-								<div class="input-group">
-									<div class="cols">
-										<label for="precio_desde">Rango Precios::</label>
-										<input class="form-control" type="text" id="precio_desde">
-									</div>
-									<div class="cols pad_left1">
-										<label for="precio_hasta">Hasta:</label>
-										<input class="form-control" type="text" id="precio_hasta">
-									</div>
-								</div>
-								<div class="input-group">
-									<div class="cols">
-										<label for="dormitorio">Dormitorio(s):</label>
-										<select class="form-control" name="" id="dormitorio">
-											<option value="">&nbsp;</option>
-											<option value="">1</option>
-											<option value="">2</option>
-											<option value="">3</option>
-											<option value="">4</option>
-											<option value="">5</option>
-											<option value="">Más de 5</option>
-										</select>
-									</div>
-									<div class="cols pad_left1">
-										<label for="banio">Baño(s):</label>
-										<select class="form-control" name="" id="banio">
-											<option value="">&nbsp;</option>
-											<option value="">1</option>
-											<option value="">2</option>
-											<option value="">3</option>
-											<option value="">Más de 3</option>
-										</select>
-									</div>
-								</div>
-						 		<a href="#" class="button" id="btn_buscar" onClick="document.getElementById('form_busqueda').submit()">Buscar</a>
-						</div>
 					</form>
 				</aside>
 			</section>
 		</div>
 		<div>
 			<footer id="datos_contacto" class="body4">
-<!-- 					<span class="call">Call Center: <span id="a_call_center"></span></span>
-                    <span class="maintitle"><i class="fa fa-map-marker"></i> Ubicación</span>
-                    <dl>
-                        <dt><span id="a_direccion"></span></dt>
-                        <dd><span>Celular:</span><a id="a_celular"></a> Telefono:</span><a id="a_telefono"></a></dd>
-                        <dd><span>Correo electrónico:</span><a id="a_correo"></a></dd>
-                    </dl> -->
 			</footer>
 		</div>
         <script src="js/jquery.min.js" type="text/javascript"></script>
